manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "kikijojo-b9bf"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "kikijojo-b9bf"
  template:
    metadata:
      labels:
        app: "kikijojo-b9bf"
    spec:
      containers:
        - name: "kikijojo-b9bf"
          image: "tokenoracle.azurecr.io/kikijojo"
          ports:
          - containerPort: 80
