manifests/deployment-2.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "kikijojo-6615"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "kikijojo-6615"
  template:
    metadata:
      labels:
        app: "kikijojo-6615"
    spec:
      containers:
        - name: "kikijojo-6615"
          image: "token1.azurecr.io/kikijojo"
          ports:
          - containerPort: 80
