manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "kikijojo-bb8d"
    labels:
        app: "kikijojo-bb8d"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "kikijojo-bb8d"
