manifests/service-4.yml
apiVersion: v1
kind: Service
metadata:
    name: "kikijojo-8cf2"
    labels:
        app: "kikijojo-8cf2"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "kikijojo-8cf2"
