manifests/ingress-4.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "kikijojo-8cf2"
    labels:
        app: "kikijojo-8cf2"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: kikijojo8946-kikijojo-8cf2.ef8ccc43938143a2a8c3.australiaeast.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "kikijojo-8cf2"
                servicePort: 80
